# estimating-human-shapes

./: README.md  male_height.txt
GUI/: QtUI.py  maya_widget.py  test.py  test.ui
GUI/src/: QtUI.py
data/measure_vtk/: 0-0-gluteal_hip.vtk  0-1-gluteal_hip.vtk  0-2-gluteal_hip.vtk  0-3-gluteal_hip.vtk  0_croth_knee_floor.vtk  1-0-chest.vtk  1-0-natural_waist.vtk  1-1-chest.vtk  1-1-natural_waist.vtk  1-2-belly_button_waist.vtk  1-2-natural_waist.vtk  1-3-belly_button_waist.vtk  1-3-natural_waist.vtk  1_across_back_shoulder_neck.vtk  2-0-gluteal_hip.vtk  2-0-maximum_hip.vtk  2-1-belly_button_waist.vtk  2-1-maximum_hip.vtk  2-2-gluteal_hip.vtk  2-2-maximum_hip.vtk  2-3-gluteal_hip.vtk  2-3-maximum_hip.vtk  2_neck_to_gluteal_hip.vtk  3-0-gluteal_hip.vtk  3-0-mid_upper_arm.vtk  3-1-gluteal_hip.vtk  3-1-mid_upper_arm.vtk  3-1-natural_waist.vtk  3-2-gluteal_hip.vtk  3-2-mid_upper_arm.vtk  3-2-natural_waist.vtk  3-3-gluteal_hip.vtk  3-3-mid_upper_arm.vtk  3-3-natural_waist.vtk  3_shoulder_to_midhand.vtk  4-0-maximum_hip.vtk  4-0-wrist.vtk  4-1-maximum_hip.vtk  4-1-wrist.vtk  4-2-natural_waist.vtk  (+33 more)
data/path/: 0  1  2  3  across_back_shoulder_neck0  belly_button_waist1  belly_button_waist2  belly_button_waist3  chest0  chest1  chest3  circle.txt  croth_knee_floor0  gluteal_hip0  gluteal_hip1  gluteal_hip2  gluteal_hip3  knee0  knee1  knee2  knee3  length.txt  maximum_hip0  maximum_hip1  maximum_hip2  maximum_hip3  maximum_thigh0  maximum_thigh1  maximum_thigh2  maximum_thigh3  mid_upper_arm0  mid_upper_arm1  mid_upper_arm2  mid_upper_arm3  natural_waist0  natural_waist1  natural_waist2  natural_waist3  natural_waist_rise0  natural_waist_rise1  (+14 more)
doc/: Estimating 3D Human Shapes from Measurements.md  Pseudo code.tex  __latexindent_temp.tex
src/: CMakeLists.txt  MSAE.cpp  convex_hull.cpp  convex_hull.h  estimate_shape.cpp  estimate_shape.h  fit_measurements.cpp  fit_measurements.h  main.cpp  measure.cpp  measure.h  measure_t.cpp  measure_t.h  reshaper.cpp  reshaper.h  testalglib.cpp  testpmp.cpp  utils.cpp  utils.h
